--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="container">
             <section class="quiz-section">
                 <div class="quiz-box">
-                    <h1>Webohjelmointi</h1>
+                    <h1>Web1</h1>
                     <div class="quiz-header">
                         <span>Quiz</span>
                         <span class="header-score">Score 0 / 3</span>
